# SomeTable

./: Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: c941a4998a67_init.py
src/config/: config.py
src/database/: db_connection.py  models.py
src/routes/: rows.py
src/schemas/: schemas.py
